[package]
name = "sak-cli"
version = "0.1.0"
edition = "2021"
authors = ["OpenHands <openhands@all-hands.dev>"]
description = "A Swiss Army Knife CLI tool for API interactions and system operations"
readme = "README.md"
license = "MIT"

[[bin]]
name = "sak-cli"
path = "src/main.rs"

[dependencies]
# Core dependencies
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Configuration management
directories = "5.0"
toml = "0.8"

# Microsoft Graph API authentication
oauth2 = { version = "4.4", features = ["pkce-plain"] }
url = "2.5"
webbrowser = "0.8"
tiny_http = "0.12"
keyring = "2.3"

# Mimecast API
base64 = "0.21"
